# ctk-functions

./: .dockerignore  .env.example  .funcignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  azure-pipelines.yaml  azure-pipelines.yml  docker-compose.yaml  function_app.py  host.json  local.settings.json  pyproject.toml  qodana.yaml
.github/: CODEOWNERS
.github/workflows/: acr.yaml  build_azure_image.yaml  dispatch.yaml  dockerhub_deploy.yaml  ghcr_deploy.yaml  test.yaml
.run/: console.sql.run.xml
src/ctk_functions/: __init__.py  app.py  config.py  exceptions.py
src/ctk_functions/core/: __init__.py  config.py  exceptions.py  middleware.py  word.py
src/ctk_functions/data/: mock_redcap_data.csv  pyrite_template.docx  referral_template.docx  report_template.docx
src/ctk_functions/functions/file_conversion/: __init__.py  controller.py  underline.lua
src/ctk_functions/functions/file_conversion/lua/: tab.lua  underline.lua
src/ctk_functions/functions/intake/: controller.py  descriptors.py  llm.py  parser.py  parser_models.py  transformers.py  writer.py  writer_llm.py
src/ctk_functions/functions/intake/utils/: language_utils.py  string_utils.py
src/ctk_functions/functions/language_tool/: __init__.py  controller.py
src/ctk_functions/functions/llm/: controller.py
src/ctk_functions/functions/wopi/: controller.py
src/ctk_functions/intake/: __init__.py  parser.py  redcap.py  transformers.py  writer.py
src/ctk_functions/intake/utils/: language_utils.py
src/ctk_functions/microservices/: __init__.py  aws.py  azure.py  cloai_service.py  language_models.py  language_tool.py  llm.py  redcap.py  utils.py
src/ctk_functions/microservices/sql/: __init__.py  client.py  models.py  models_autogen.py
src/ctk_functions/routers/: __init__.py
src/ctk_functions/routers/file_conversion/: controller.py  schemas.py  views.py
src/ctk_functions/routers/file_conversion/lua/: tab.lua
src/ctk_functions/routers/hbn_report_summary/: controller.py  prompt.py  schemas.py  views.py
src/ctk_functions/routers/health/: __init__.py  controller.py  schemas.py  views.py
src/ctk_functions/routers/intake/: controller.py  views.py
src/ctk_functions/routers/intake/intake_processing/: __init__.py  parser.py  parser_models.py  transformers.py  writer.py  writer_llm.py
src/ctk_functions/routers/intake/intake_processing/utils/: __init__.py  language_utils.py  string_utils.py
src/ctk_functions/routers/language_tool/: __init__.py  controller.py  schemas.py  views.py
src/ctk_functions/routers/llm/: __init__.py  controller.py  schemas.py  views.py
src/ctk_functions/routers/pyrite/: README.md  appendix_a.py  controller.py  reports.py  sql_data.py  types.py  views.py
src/ctk_functions/routers/pyrite/reports/: __init__.py  appendix_a.py  introduction.py  reports.py  sections.py  utils.py
src/ctk_functions/routers/pyrite/tables/: __init__.py  academic_achievement.py  base.py  cbc.py  cbcl_ysr.py  celf5.py  conners3.py  ctopp2.py  ctopp_2.py  gars.py  grooved_pegboard.py  language.py  mfq.py  scared.py  scq.py  srs.py  swan.py  test_descriptions.py  tscore.py  utils.py  wisc_composite.py  wisc_subtest.py
src/ctk_functions/routers/pyrite/tables/generic/: __init__.py  parent_child.py  tscore.py
src/ctk_functions/routers/pyrite/tables_old/: __init__.py  academic_achievement.py  base.py  cbcl_ysr.py  celf5.py  conners3.py  ctopp_2.py  gars.py  grooved_pegboard.py  language.py  mfq.py  scared.py  scq.py  srs.py  swan.py  utils.py  wisc_composite.py  wisc_subtest.py
src/ctk_functions/routers/referral/: __init__.py  controller.py  schemas.py  views.py
src/ctk_functions/text/: __init__.py  corrections.py
src/ctk_intake_to_report/: algorithms.py
tests/: conftest.py  test_fibonacci.py
tests/data/: test_redcap_data.csv
tests/endpoint/: test_file_conversion.py  test_health.py  test_intake.py  test_language_tool.py  test_llm.py  test_pyrite.py  test_referrals.py
tests/integration/: azure_test_intakes.py  test_health_connections.py  test_language_tool.py  test_language_utils.py  test_text_corrections.py
tests/smoke/: test_function_app.py  test_intake_writer_smoke.py
tests/unit/: test_config.py  test_file_conversion_controller.py  test_intake_parser.py  test_intake_transformers.py  test_intake_utils.py  test_intake_writer.py  test_pyrite_appendix_a.py  test_pyrite_reports.py  test_pyrite_sections.py  test_pyrite_table_cbcl_ysr.py  test_pyrite_table_utils.py  test_pyrite_tables_base.py  test_redcap.py  test_text_corrections.py  test_wopi_controller.py
tests/unit/pyrite_tables/: __init__.py  conftest.py  test_base.py  test_table_implementations.py  test_utils.py  test_wisc_table_utils.py
