[project]
name = "ctk-functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiofiles>=24.1.0",
  "aiohttp>=3.10.10",
  "azure-functions>=1.21.3",
  "cmi-docx>=0.3.0",
  "language-tool-python>=2.8.1",
  "openai>=1.52.0",
  "pycap>=2.6.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.0",
  "pypandoc-binary>=1.14",
  "python-dateutil>=2.9.0.post0",
  "pytz>=2024.2",
  "spacy>=3.8.2",
  "anthropic[bedrock]>=0.36.2",
  "jsonpickle>=3.3.0",
  "instructor>=1.6.3"
]

[tool.uv]
dev-dependencies = [
  "ipykernel>=6.29.5",
  "mypy>=1.12.1",
  "pre-commit>=4.0.1",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-dotenv>=0.5.2",
  "pytest-mock>=3.14.0",
  "ruff>=0.7.0",
  "types-aiofiles>=24.1.0.20240626",
  "types-python-dateutil>=2.9.0.20241003",
  "types-pytz>=2024.2.0.20241003",
  "types-requests>=2.32.0.20241016"
]

[tool.uv.sources]
ctk_functions = {path = "./src/ctk_functions"}

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101",  # self should not be annotated.
  "ANN102"  # cls should not be annotated.
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",  # asserts should be used in pytest
  "SLF001",  # accessing private members in tests is fine
  "INP001"  # tests should not be a module
]
"local/**/*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.vulture]
min_confidence = 80
paths = ["src"]
sort_by_size = true
verbose = true
