[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ctk_functions"
version = "0.1.0"
description = "A beautiful description."
authors = ["Reinder Vos de Wael <reinder.vosdewael@childmind.org>"]
license = "LGPL-2.1"
readme = "README.md"
packages = [{include = "ctk_functions", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
azure-functions = "^1.21.3"
pydantic = "^2.9.2"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.2"
pydantic-settings = "^2.6.0"
cmi-docx = "^0.3.0"
aiofiles = "^24.1.0"
aiohttp = "^3.10.10"
pycap = "^2.6.0"
pypandoc-binary = "^1.14"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz"}
language-tool-python = "^2.8.1"
spacy = "^3.8.2"
openai = "^1.52.1"
jsonpickle = "^3.3.0"
anthropic = {version = "<0.37", extras = ["bedrock"]}
instructor = {extras = ["anthropic"], version = "^1.6.3"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pytest-cov = "^5.0.0"
ruff = "^0.7.0"
types-python-dateutil = "^2.9.0.20241003"
types-pytz = "^2024.2.0.20241003"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.0"
types-requests = "^2.32.0.20241016"
types-aiofiles = "^24.1.0.20240626"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.jupyter.dependencies]
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101",  # self should not be annotated.
  "ANN102"  # cls should not be annotated.
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",  # asserts should be used in pytest
  "SLF001",  # accessing private members in tests is fine
  "INP001"  # tests should not be a module
]
"local/**/*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.vulture]
min_confidence = 80
paths = ["src"]
sort_by_size = true
verbose = true
